// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays image an image attachments 1`] = `
<span
  data-stylename="link"
  onClick={[Function]}
>
  <div
    data-stylename="comment-card"
  >
    <div
      data-stylename="comment-header"
    >
      <RoundImage
        data-stylename="profileImage"
        url="foo.jpg"
      />
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          data-stylename="comment-meta"
        >
          <span
            data-stylename="person-name"
          >
            Joe Smith
          </span>
           
          commented on
           
          <span
            data-stylename="post-title"
          >
            Awesome Sauce #hashtag
          </span>
        </div>
      </Highlight>
      <span
        data-stylename="date"
      >
        Commented just now
      </span>
    </div>
    <CardImageAttachments
      attachments={
        Array [
          Object {
            "attachmentType": "image",
            "url": "jam.png",
          },
        ]
      }
      data-stylename="comment-images"
      linked={true}
    />
    <CardFileAttachments
      attachments={
        Array [
          Object {
            "attachmentType": "image",
            "url": "jam.png",
          },
        ]
      }
      data-stylename="comment-files"
    />
    <ClickCatcher>
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <HyloHTML
          data-stylename="comment-body"
          html="<p>text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the …</p>"
        />
      </Highlight>
    </ClickCatcher>
    <div
      data-stylename="comment-footer"
    />
  </div>
</span>
`;

exports[`matches last snapshot 1`] = `
<span
  data-stylename="link"
  onClick={[Function]}
>
  <div
    data-stylename="comment-card"
  >
    <div
      data-stylename="comment-header"
    >
      <RoundImage
        data-stylename="profileImage"
        url="foo.jpg"
      />
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          data-stylename="comment-meta"
        >
          <span
            data-stylename="person-name"
          >
            Joe Smith
          </span>
           
          commented on
           
          <span
            data-stylename="post-title"
          >
            Awesome Sauce #hashtag
          </span>
        </div>
      </Highlight>
      <span
        data-stylename="date"
      >
        Commented just now
      </span>
    </div>
    <CardImageAttachments
      attachments={Array []}
      data-stylename="comment-images"
      linked={true}
    />
    <CardFileAttachments
      attachments={Array []}
      data-stylename="comment-files"
    />
    <ClickCatcher>
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <HyloHTML
          data-stylename="comment-body"
          html="<p>text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the …</p>"
        />
      </Highlight>
    </ClickCatcher>
    <div
      data-stylename="comment-footer"
    />
  </div>
</span>
`;

exports[`matches last snapshot with different config 1`] = `
<span
  data-stylename="link"
  onClick={[Function]}
>
  <div
    data-stylename="comment-card expanded"
  >
    <div
      data-stylename="comment-header"
    >
      <RoundImage
        data-stylename="profileImage"
        url="foo.jpg"
      />
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          data-stylename="comment-meta"
        >
          <span
            data-stylename="person-name"
          >
            Joe Smith
          </span>
           
          commented on
           
          <span
            data-stylename="post-title"
          >
            Awesome Sauce #hashtag
          </span>
        </div>
      </Highlight>
      <span
        data-stylename="date"
      >
        Commented just now
      </span>
    </div>
    <CardImageAttachments
      attachments={Array []}
      data-stylename="comment-images"
      linked={true}
    />
    <CardFileAttachments
      attachments={Array []}
      data-stylename="comment-files"
    />
    <ClickCatcher>
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <HyloHTML
          data-stylename="comment-body"
          html="<p>text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. Irrelevant Change</p>"
        />
      </Highlight>
    </ClickCatcher>
    <div
      data-stylename="comment-footer"
    />
  </div>
</span>
`;
